--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,11 +12,29 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "neo4j-driver": "^5.17.0",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "@google/generative-ai": "^0.1.3",
+    "@aws-sdk/client-s3": "^3.511.0",
+    "@aws-sdk/s3-request-presigner": "^3.511.0",
+    "multer": "^1.4.5-lts.1",
+    "langchain": "^0.1.9",
+    "pg": "^8.11.3",
+    "pgvector": "^0.1.8",
+    "markdown-it": "^14.0.0",
+    "dotenv": "^16.3.1",
+    "uuid": "^9.0.1",
+    "langsmith": "^0.0.66",
+    "@langchain/community": "^0.0.32",
+    "@langchain/langgraph": "^0.0.25",
+    "@langchain/openai": "^0.0.14"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
+    "@types/pg": "^8.10.9",
+    "@types/uuid": "^9.0.7",
+    "@types/markdown-it": "^13.0.7",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
