--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express-session": "^1.17.3",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "neo4j-driver": "^5.17.0",
     "openai": "^4.28.0",
     "@google/generative-ai": "^0.1.3",
+    "googleapis": "^129.0.0",
     "@aws-sdk/client-s3": "^3.511.0",
     "@aws-sdk/s3-request-presigner": "^3.511.0",
     "multer": "^1.4.5-lts.1",
@@ -26,10 +30,13 @@
     "langsmith": "^0.0.66",
     "@langchain/community": "^0.0.32",
     "@langchain/langgraph": "^0.0.25",
-    "@langchain/openai": "^0.0.14"
+    "@langchain/openai": "^0.0.14",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.11",
     "@types/pg": "^8.10.9",
