--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -15,6 +15,8 @@ OPENAI_TEMPERATURE=0.7
 GOOGLE_API_KEY=your-google-api-key-here
 
 # Neo4j Database
+# When running with Docker Compose: NEO4J_URI=bolt://neo4j:7687 (container name)
+# When running directly on host: NEO4J_URI=bolt://localhost:7687
 NEO4J_URI=bolt://neo4j:7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=testpassword
