--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-force-graph": "^1.45.1",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.6.0",
