--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node --import tsx src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test:api": "newman run ../../docs/postman/ragguide.postman_collection.json -e ../../docs/postman/local.postman_environment.json"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.511.0",
