--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --import tsx src/index.ts",
+    "start:docker": "wait-on tcp:neo4j:7687 && tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test:api": "newman run ../../docs/postman/ragguide.postman_collection.json -e ../../docs/postman/local.postman_environment.json"
@@ -45,7 +46,8 @@
     "@types/multer": "^1.4.11",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
-    "tsx": "^4.7.1",
+    "tsx": "^4.7.21",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
