--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -56,5 +56,6 @@
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
     "vite-tsconfig-paths": "^4.3.2"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
