--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   backend:
     build:
@@ -6,12 +7,8 @@ services:
     container_name: rag-backend
     ports:
       - "3000:3000"
-    # ⬇️  Bind-mount source but keep deps in a named volume
-    volumes:
-      - ../apps/backend:/app
-      - backend_nm:/app/node_modules
-    working_dir: /app
-    # Wait for DBs to be healthy
+    volumes: []
+    working_dir: /app/apps/backend 
     depends_on:
       neo4j:
         condition: service_healthy
@@ -20,33 +17,30 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3000
-      NEO4J_URI: "bolt://neo4j:7687"
-      NEO4J_USER: "neo4j"
-      NEO4J_PASSWORD: "testpassword"
-      POSTGRES_HOST: "postgres"
+      NEO4J_URI: bolt://neo4j:7687
+      NEO4J_USER: neo4j
+      NEO4J_PASSWORD: testpassword
+      POSTGRES_HOST: postgres
       POSTGRES_PORT: "5432"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgrespassword"
-      POSTGRES_DB: "ragdb"
-    # ⬇️  start script waits until bolt port is open
-    command: pnpm start:docker        # defined in apps/backend/package.json
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_DB: ragdb
+    command: pnpm start:docker   
 
   frontend:
     build:
-      context: ../apps/frontend
-      dockerfile: Dockerfile.dev
+      context: ../
+      dockerfile: apps/frontend/Dockerfile.dev
     container_name: rag-frontend
     ports:
       - "5173:5173"
-    volumes:
-      - ../apps/frontend:/app
-      - frontend_nm:/app/node_modules
-    working_dir: /app
+    volumes: []
+    working_dir: /app/apps/frontend
     depends_on:
       - backend
     environment:
-      VITE_API_URL: "http://localhost:3000"
-    command: pnpm dev
+      VITE_API_URL: http://localhost:3000
+    command: pnpm dev  
 
   neo4j:
     image: neo4j:5.15
@@ -55,14 +49,13 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      NEO4J_AUTH: "neo4j/testpassword"
+      NEO4J_AUTH: neo4j/testpassword
     volumes:
       - neo4j_data:/data
       - neo4j_logs:/logs
       - neo4j_import:/var/lib/neo4j/import
       - neo4j_plugins:/plugins
       - ./neo4j/plugins:/var/lib/neo4j/plugins
-    # ⬇️  simple health-check: wait for bolt to accept TCP
     healthcheck:
       test: ["CMD", "bash", "-c", "echo > /dev/tcp/localhost/7687"]
       interval: 10s
@@ -75,9 +68,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgrespassword"
-      POSTGRES_DB: "ragdb"
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_DB: ragdb
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -92,5 +85,4 @@ volumes:
   neo4j_logs:
   neo4j_import:
   neo4j_plugins:
-  backend_nm:    # named volumes preserve installed deps
-  frontend_nm:
+
