--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,6 +36,7 @@
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "uuid": "^9.0.1",
+    "wait-on": "^8.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
