--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,10 +17,10 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3000
-      NEO4J_URI: bolt://neo4j:7687
+      NEO4J_URI: bolt://rag-neo4j:7687
       NEO4J_USER: neo4j
       NEO4J_PASSWORD: testpassword
-      POSTGRES_HOST: postgres
+      POSTGRES_HOST: rag-postgres
       POSTGRES_PORT: "5432"
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgrespassword
