--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,8 +7,9 @@ services:
     container_name: rag-backend
     ports:
       - "3000:3000"
-    volumes: []
-    working_dir: /app/apps/backend 
+    volumes:
+      - ../apps/backend:/app
+    working_dir: /app
     depends_on:
       neo4j:
         condition: service_healthy
@@ -25,7 +26,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgrespassword
       POSTGRES_DB: ragdb
-    command: pnpm start:docker   
+    command: node --import tsx src/index.ts   
 
   frontend:
     build:
