--- a/apps/backend/Dockerfile.dev
+++ b/apps/backend/Dockerfile.dev
@@ -3,6 +3,10 @@ WORKDIR /app
 RUN corepack enable
 RUN apk --no-cache add curl wget
 
+# Copy workspace files for proper dependency resolution
+COPY ../../pnpm-workspace.yaml ./
+COPY ../../pnpm-lock.yaml ./
+
 # Install backend dependencies directly
 COPY apps/backend/package.json ./
 RUN pnpm install
