--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,7 +37,8 @@
     "pino-pretty": "^10.3.1",
     "uuid": "^9.0.1",
     "wait-on": "^8.0.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "tsx": "^4.7.21"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -47,7 +48,6 @@
     "@types/multer": "^1.4.11",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
-    "tsx": "^4.7.21",
     "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@10.10.0"
